[gd_scene load_steps=13 format=3 uid="uid://cxfbnohv0ayde"]

[ext_resource type="Script" path="res://scripts/menus/popup_notification.gd" id="1_c37e1"]
[ext_resource type="PackedScene" uid="uid://jsg3njon7m1i" path="res://scenes/gui/text_button.tscn" id="1_tm5o3"]
[ext_resource type="Shader" path="res://resources/shaders/text_button.gdshader" id="2_u8gn1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu7ku"]
bg_color = Color(0.89, 0.854697, 0.7387, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.61, 0.569028, 0.4209, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 15
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_3vfaj"]
font_size = 40
font_color = Color(0.226153, 0.20497, 0.131826, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybs34"]
bg_color = Color(0.0383972, 0.0383972, 0.0383971, 1)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.611765, 0.568627, 0.419608, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xuaud"]
font_size = 25
font_color = Color(0.227451, 0.203922, 0.133333, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g7w8k"]
resource_local_to_scene = true
shader = ExtResource("2_u8gn1")
shader_parameter/highlighted = false
shader_parameter/brightness = 0.6

[sub_resource type="Animation" id="Animation_435fb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w0qas"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1332),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ngcav"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1332),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jhqmb"]
_data = {
"RESET": SubResource("Animation_435fb"),
"fade_in": SubResource("Animation_w0qas"),
"fade_out": SubResource("Animation_ngcav")
}

[node name="PopupNotification" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c37e1")

[node name="PopupPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 450)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uu7ku")

[node name="TitleLabel" type="Label" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Notification"
label_settings = SubResource("LabelSettings_3vfaj")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 4.0
grow_horizontal = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_ybs34")

[node name="MessageLabel" type="Label" parent="PopupPanel"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -110.0
offset_right = 265.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "This Panel let you know if something intresting happened"
label_settings = SubResource("LabelSettings_xuaud")
autowrap_mode = 3

[node name="TextButton" parent="PopupPanel" instance=ExtResource("1_tm5o3")]
material = SubResource("ShaderMaterial_g7w8k")
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -70.0
offset_right = 110.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jhqmb")
}

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="button_pressed" from="PopupPanel/TextButton" to="." method="_on_text_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
